syntax = "proto3";

option csharp_namespace = "Expert_gRPC";

package expert;

message AnswerRequest {
	string prompt = 1;
}

message AnswerResponse {
	string completion = 1;
}

message StreamResponse {
	string token = 1;
}